<resources>
    <string name="app_name">CarlosMendez_GreenFlag</string>
    <string name="create_account">Create an Account</string>
    <string name="next">Next</string>
    <string name="password_hint">See criteria below</string>

    <string name="main_tv1">GreenFlag customers can create an account to access</string>
    <string name="main_tvlist_1">Car health updates</string>
    <string name="main_tvlist_2">Request a rescue online</string>
    <string name="main_tvlist_3">Policy information</string>

    <string name="email">Email address</string>
    <string name="password_create">Create password</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="password_criteria">Your password should have a minimum of 8 characters and contain at least one number, one uppercase and one lower case letter. You can use special characters.</string>
    <string name="error_password1">One of the passwords you entered wasn\'t valid</string>
    <string name="error_password2">Your passwords don\'t match</string>
    <string name="error_email1">An account already exists for this email address</string>
    <string name="error_email2">Email is not valid</string>
</resources>