<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:background="@color/black">

    <ImageButton
        android:id="@+id/goto_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:contentDescription="@string/goback"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintBottom_toTopOf="@id/v_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_second1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/v_barrier"

            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="@font/museosans_300"
            android:textSize="30sp"
            />

    <View
        android:id="@+id/v_barrier"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="80dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_barrier"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            >

            <TextView
                android:id="@+id/tv_email"
                android:layout_marginTop="20dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/email"
                android:textColor="@color/white"
                android:fontFamily="@font/museosans_300"
                android:textSize="30sp"
                />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textSize="30sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tv_password1"
                android:layout_marginTop="20dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/password_create"
                android:textColor="@color/white"
                android:fontFamily="@font/museosans_300"
                android:textSize="30sp"
                />

            <EditText
                android:id="@+id/et_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textSize="30sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tv_password2"
                android:layout_marginTop="20dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/password_repeat"
                android:textColor="@color/white"
                android:fontFamily="@font/museosans_300"
                android:textSize="30sp"
                />

            <EditText
                android:id="@+id/et_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textSize="30sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tv_criteria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:fontFamily="@font/museosans_300"
                android:text="@string/password_criteria"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

